<resources>
    <string name="app_name">Grey Market</string>
    <string name="send">SEND</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="get_in">Get in</string>
    <string name="otp">OTP</string>
    <string name="textview">TextView</string>
    <string name="mobile_no_on_which_international_call_received">Mobile no. on which international call received</string>
    <string name="state">State</string>
    <string name="received_number">Received number</string>
    <string name="country_from_where_the_call_received">Country from where the call received</string>
    <string name="send1">Send</string>
    <string name="title_activity_help">help</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>